@@ -5,8 +5,9 @@ import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 public class CharmsGoblinBoss extends CustomBossesConfigFields {
     public CharmsGoblinBoss() {
@@ -22,23 +23,23 @@ public class CharmsGoblinBoss extends CustomBossesConfigFields {
         setLeggings(new ItemStack(Material.IRON_LEGGINGS));
         setBoots(new ItemStack(Material.IRON_BOOTS));
         setBaby(true);
-        setPowers(Arrays.asList("gold_explosion.yml", "gold_shotgun.yml", "spirit_walk.yml"));
+        setPowers(new ArrayList<>(List.of("gold_explosion.yml", "gold_shotgun.yml", "spirit_walk.yml")));
         setSpawnMessage("&cA Charms Goblin has been sighted!");
         setDeathMessage("&aA Charms Goblin has been slain by $players!");
-        setDeathMessages(Arrays.asList(
+        setDeathMessages(new ArrayList<>(List.of(
                 "&e&l---------------------------------------------",
                 "&eThe Charms Goblin has been pillaged!",
                 "&c&l    1st Damager: $damager1name &cwith $damager1damage damage!",
                 "&6&l    2nd Damager: $damager2name &6with $damager2damage damage!",
                 "&e&l    3rd Damager: $damager3name &ewith $damager3damage damage!",
                 "&aSlayers: $players",
-                "&e&l---------------------------------------------"));
+                "&e&l---------------------------------------------")));
         setEscapeMessage("&4A Charms Goblin has escaped!");
         setLocationMessage("&cCharms Goblin: $distance blocks away!");
         setTrails(Collections.singletonList(Material.GOLD_NUGGET.toString()));
         setAnnouncementPriority(2);
         setPersistent(true);
-        setUniqueLootList(Arrays.asList(
+        setUniqueLootList(new ArrayList<>(List.of(
                 "berserker_charm.yml:0.2",
                 "chameleon_charm.yml:0.2",
                 "cheetah_charm.yml:0.2",
@@ -52,7 +53,7 @@ public class CharmsGoblinBoss extends CustomBossesConfigFields {
                 "scorpion_charm.yml:0.2",
                 "shulker_charm.yml:0.2",
                 "slowpoke_charm.yml:0.2",
-                "vampiric_charm.yml:0.2"));
+                "vampiric_charm.yml:0.2")));
         setFollowDistance(100);
         setCustomModel("em_goblin_charms");
     }
