@@ -4,8 +4,9 @@ import com.magmaguy.elitemobs.config.custombosses.CustomBossesConfigFields;
 import org.bukkit.Particle;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 public class KillerRabbitOfCaerbannogConfig extends CustomBossesConfigFields {
     public KillerRabbitOfCaerbannogConfig() {
@@ -15,11 +16,11 @@ public class KillerRabbitOfCaerbannogConfig extends CustomBossesConfigFields {
                 "$eventBossLevel &cKiller Rabbit of Caerbannog",
                 "dynamic");
         setUniqueLootList(Collections.singletonList("rabbit_charm.yml:1"));
-        setTrails(Arrays.asList(Particle.LARGE_SMOKE.toString(),
+        setTrails(new ArrayList<>(List.of(Particle.LARGE_SMOKE.toString(),
                 Particle.LARGE_SMOKE.toString(),
                 Particle.LARGE_SMOKE.toString(),
                 Particle.LARGE_SMOKE.toString(),
                 Particle.FLAME.toString(),
-                Particle.FLAME.toString()));
+                Particle.FLAME.toString())));
     }
 }
