@@ -4,8 +4,9 @@ import com.magmaguy.elitemobs.config.custombosses.CustomBossesConfigFields;
 import org.bukkit.Particle;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 public class QueenBeeBoss extends CustomBossesConfigFields {
     public QueenBeeBoss() {
@@ -14,13 +15,13 @@ public class QueenBeeBoss extends CustomBossesConfigFields {
                 true,
                 "$eventBossLevel &6Queen Bee",
                 "dynamic");
-        setPowers(Collections.singletonList("summonable:summonType=ON_HIT:chance=0.5:filename=imperial_bee_guard.yml"));
+        setPowers(new ArrayList<>(List.of("summonable:summonType=ON_HIT:chance=0.5:filename=imperial_bee_guard.yml")));
         setUniqueLootList(Collections.singletonList("the_stinger.yml:1"));
-        setTrails(Arrays.asList(Particle.LARGE_SMOKE.toString(),
+        setTrails(new ArrayList<>(List.of(Particle.LARGE_SMOKE.toString(),
                 Particle.LARGE_SMOKE.toString(),
                 Particle.LARGE_SMOKE.toString(),
                 Particle.LARGE_SMOKE.toString(),
                 Particle.FLAME.toString(),
-                Particle.FLAME.toString()));
+                Particle.FLAME.toString())));
     }
 }
