@@ -5,7 +5,8 @@ import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class WoodLeagueWave18Melee extends CustomBossesConfigFields {
     public WoodLeagueWave18Melee() {
@@ -15,8 +16,7 @@ public class WoodLeagueWave18Melee extends CustomBossesConfigFields {
                 "$normalLevel &4Fencing Club Enthusiast",
                 "18");
         setFollowDistance(60);
-        setPowers(Arrays.asList("corpse.yml", "attack_fire.yml"));
-
+        setPowers(new ArrayList<>(List.of("corpse.yml", "attack_fire.yml")));
         setMainHand(new ItemStack(Material.DIAMOND_SWORD));
     }
 }
