@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.customitems.premade;
 import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class OwlCharmConfig extends CustomItemsConfigFields {
@@ -12,9 +12,9 @@ public class OwlCharmConfig extends CustomItemsConfigFields {
                 true,
                 Material.ELYTRA,
                 "&bOwl Charm",
-                Arrays.asList("&aBecome the ultimate nocturnal", "&apredator!"));
+                new ArrayList<>(List.of("&aBecome the ultimate nocturnal", "&apredator!")));
         setEnchantments(List.of("VANISHING_CURSE,1"));
-        setPotionEffects(Arrays.asList("GLOWING,0,target,onHit", "JUMP,2,self,continuous", "NIGHT_VISION,0,self,continuous", "WEAKNESS,0,self,continuous"));
+        setPotionEffects(new ArrayList<>(List.of("GLOWING,0,target,onHit", "JUMP,2,self,continuous", "NIGHT_VISION,0,self,continuous", "WEAKNESS,0,self,continuous")));
         setDropWeight("1");
     }
 }
