@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.customitems.premade;
 import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class ScorpionCharm extends CustomItemsConfigFields {
@@ -12,7 +12,7 @@ public class ScorpionCharm extends CustomItemsConfigFields {
                 true,
                 Material.POISONOUS_POTATO,
                 "&bScorpion Charm",
-                Arrays.asList("&aFloat like a butterfly,", "&asting like a bee,", "&apoison like a potato!"));
+                new ArrayList<>(List.of("&aFloat like a butterfly,", "&asting like a bee,", "&apoison like a potato!")));
         setEnchantments(List.of("VANISHING_CURSE,1"));
         setPotionEffects(List.of("POISON,0,target,onHit"));
         setDropWeight("1");
