@@ -4,21 +4,22 @@ import com.magmaguy.elitemobs.config.dungeonpackager.DungeonPackagerConfigFields
 import com.magmaguy.elitemobs.utils.DiscordLinks;
 import org.bukkit.World;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class HallosseumLair extends DungeonPackagerConfigFields {
     public HallosseumLair() {
         super("hallosseum_lair",
                 true,
                 "&2[lvl 030] &cThe Hallosseum",
-                Arrays.asList("&fThe 2020 spooky halloween encounter!",
-                        "&6Credits: MagmaGuy & 69OzCanOfBepis"),
+                new ArrayList<>(List.of("&fThe 2020 spooky halloween encounter!",
+                        "&6Credits: MagmaGuy & 69OzCanOfBepis")),
                 DiscordLinks.freeMinidungeons,
                 DungeonSizeCategory.LAIR,
                 "em_hallosseum",
                 World.Environment.NETHER,
                 true,
-                "em_hallosseum,65,21,80,20,0",
+                "em_hallosseum,66.5,22.2,77.5,20,0",
                 0,
                 "Difficulty: &chard\n" +
                         "$bossCount level $lowestTier Big Boss!\n" +
