@@ -4,7 +4,8 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class EliteGhastConfig extends MobPropertiesConfigFields {
     public EliteGhastConfig() {
@@ -12,9 +13,9 @@ public class EliteGhastConfig extends MobPropertiesConfigFields {
                 EntityType.GHAST,
                 true,
                 "&fLvl &2$level &fElite &fGhast",
-                Arrays.asList("$player &cdidn't dodge $entity&c &cfireballs!",
+                new ArrayList<>(List.of("$player &cdidn't dodge $entity&c &cfireballs!",
                         "$player &cwas blown to bits $entity&c!",
-                        "$entity &cgot $player's &cbacon!"),
+                        "$entity &cgot $player's &cbacon!")),
                 22.5);
     }
 }
