@@ -3,7 +3,8 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class EliteWitchConfig extends MobPropertiesConfigFields {
     public EliteWitchConfig() {
@@ -11,8 +12,8 @@ public class EliteWitchConfig extends MobPropertiesConfigFields {
                 EntityType.WITCH,
                 true,
                 "&fLvl &2$level &fElite &5Witch",
-                Arrays.asList("$player &cbecame $entity's &ctest subject!",
-                        "$player &chas been bewitched by $entity&c!"),
+                new ArrayList<>(List.of("$player &cbecame $entity's &ctest subject!",
+                        "$player &chas been bewitched by $entity&c!")),
                 6);
     }
 }
