@@ -3,7 +3,8 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 public class EliteWitherConfig extends MobPropertiesConfigFields {
     public EliteWitherConfig() {
@@ -11,8 +12,8 @@ public class EliteWitherConfig extends MobPropertiesConfigFields {
                 EntityType.WITHER,
                 true,
                 "&fLvl &2$level &7Elite &5Wither",
-                Arrays.asList("$player &cangered $entity&c!",
-                        "$player &chas met $entity's &cfury!"),
+                new ArrayList<>(List.of("$player &cangered $entity&c!",
+                        "$player &chas met $entity's &cfury!")),
                 12);
     }
 }
